<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            android:backgroundTint="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/forest_app_bar_name"
            android:textAppearance="@style/TextAppearance.Vanrakshak.Title"/>

        <TextView
            android:id = "@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/loginButton_name"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loginTextMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="VERIFYING CREDENTIALS"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id = "@+id/emailEditText"
            style="@style/Widget.Vanrakshak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditText"
            style="@style/Widget.Vanrakshak.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPasswordButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgotPassword_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginSubmit"
                style="@style/Widget.Vanrakshak.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/submitButton_name"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginCancel"
                style="@style/Widget.Vanrakshak.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/loginSubmit"
                android:layout_toLeftOf="@id/loginSubmit"
                android:text="@string/cancelButton_name"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>