<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin">

    <TextView
        android:text = "@string/registrationPage_name"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "35dp"
        android:id = "@+id/registerTextView"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="EMAIL"
        android:textColor="@color/black"
        android:layout_above="@id/registeredEmail"
        android:layout_marginBottom="15dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registeredEmail"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginBottom="35dp"
        android:text="something@example.com"
        android:layout_above="@id/registerOtpTextView"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "Enter OTP sent to your email"
        android:textSize="25dp"
        android:id="@+id/registerOtpTextView"
        android:layout_above="@id/registerOtpEditText"
        android:layout_marginBottom="15dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/registerOtpEditText"
        android:inputType="number"
        android:hint = "OTP"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignRight="@id/registerOtpTextView"
        android:layout_alignEnd="@id/registerOtpTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton_name"
        android:id="@+id/registerOtpSubmit"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/registerTextView"
        android:layout_toStartOf="@+id/registerTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelButton_name"
        android:id="@+id/registerCancel"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/registerTextView"
        android:layout_toEndOf="@+id/registerTextView" />

</RelativeLayout>