<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppbar"
                style="@style/Widget.Vanrakshak.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_menu_24px"
                app:logo="@drawable/logo_removebg_preview"
                app:title="@string/forest_app_bar_name"
                app:menu="@menu/appbar_menu" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/taskPageTaskName"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="TASK NAME"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/taskPageTaskType"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TASK TYPE"/>

            <TextView
                android:id="@+id/taskPageTypeName"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Name"
                android:layout_toRightOf="@id/taskPageTaskType"/>
        </RelativeLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="DESCRIPTION"/>

        <TextView
            android:id="@+id/taskPageTaskDescription"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="Some descriptive text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/taskPageAssigner"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="ASSIGNED BY"/>

            <TextView
                android:id="@+id/taskPageTaskAssigner"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/taskPageAssigner"
                android:text="Officer Name"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/taskPageDeadline"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DEADLINE"/>

            <TextView
                android:id="@+id/taskPageDeadlineDate"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/taskPageDeadline"
                android:text="Deadline Date"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskReportTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/taskReport_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:maxLines="4"
                android:lines="3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/taskCamerabutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/cameraButton_name"/>

            <ImageView
                android:id="@+id/taskImageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:background="@color/colorAccent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/taskPageProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/taskPageProgressMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:text="Submitting Task Report"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/taskSubmit"
                style="@style/Widget.Vanrakshak.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/submitButton_name"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/taskCancel"
                style="@style/Widget.Vanrakshak.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton_name"/>
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemIconSize="40dp"
        app:itemIconPadding="30dp"
        app:itemIconTint="@color/textColorPrimary"
        app:itemHorizontalPadding="30dp"
        app:itemTextColor="@color/textColorPrimary"
        app:itemTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/navigation_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>